syntax = "proto3";

option go_package = ".;kvstore";

package kvstore;

service Storage {
    rpc Set(SetRequest) returns (SetReply) {}
    rpc Get(GetRequest) returns (GetReply) {}
    rpc Del(DelRequest) returns (DelReply) {}
    rpc Split(SplitRequest) returns (SplitReply) {}
    rpc Scan(ScanRequest) returns (ScanReply) {}
    rpc SyncConf(SyncConfRequest) returns (SyncConfReply) {}
    rpc getConf(GetConfRequest) returns (GetConfReply) {}
    rpc WakeUp(WakeRequest) returns (WakeReply) {}
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetReply {
    string err = 1;
    string status = 2;
    string result = 3;
    int64 target = 4; // moved, 此key真正的存储节点
    int64 version = 5;
}

message GetRequest {
    string key = 1;
}

message GetReply {
    string err = 1;
    string status = 2;
    string result = 3;
    int64 target = 4; // moved, 此key真正的存储节点
    int64 version = 5;
}

message DelRequest {
    string key = 1;
}

message DelReply {
    string err = 1;
    string status = 2;
    int64 result = 3;
    int64 target = 4; // moved, 此key真正的存储节点
    int64 version = 5;
}

message SplitRequest {
    int64 port = 1;
}

message SplitReply {
    string err = 1;
    string status = 2;
    int64 result = 3;
    bool full = 4;
    int64 version = 5;
}

message ScanRequest {
    int64 idx = 1;
}

message ScanReply {
    string err = 1;
    string status = 2;
    string result = 3;
    int64 count = 4;
    int64 version = 5;
}

message SyncConfRequest {
    int64 next = 1;
    int64 level = 2;
    int64 hashSize = 3;
    message ServConf {
        int64 idx = 1;
        string address = 2;
        string status = 3;
        int64 maxKey = 4;
    }
    repeated ServConf server = 4;
    int64 begin = 5; //主动同步的节点
    bool canSplit = 6;
}

message SyncConfReply {
    string err = 1;
    string status = 2;
    string result = 3;
    int64 version = 4;
}

message GetConfRequest {
    int64 noname = 1; // 不知道要啥参数
}

message GetConfReply {
    string err = 1;
    string status = 2;
    string result = 3;
    int64 next = 4;
    int64 level = 5;
    int64 hashSize = 6;
    message ServConf {
        int64 idx = 1;
        string address = 2;
        string status = 3;
        int64 maxKey = 4;
    }
    repeated ServConf server = 7;
    int64 version = 8;
}


message WakeRequest {
    int64 noname = 1; // 不知道要啥参数
}

message WakeReply {
    string err = 1;
    string status = 2;
    string result = 3;
    int64 version = 4;
}